# advanced_cpp

./: README.md
notes/Concurrency_In_Action/: CMakeLists.txt  Chapter_2.cpp  HelloWorld.cpp  Optimizing_Calculations.cpp  learn_eigen.cpp  learn_std_optional.cpp
notes/CppCon/: Back to Basics: C++ Concurrency - David Olsen - CppCon 2023 Notes.md  Building Effective Embedded Systems in C++: Architectural Best Practices - Gili Kamma - CppCon 2023 Notes.md  Real-time Programming with the C++ Standard Library - Timur Doumler - CppCon 2021 Notes.md
notes/TIL/: Notes.md
past_interviews/CapGemini/: CMakeLists.txt  main.cpp  test.cpp  test2.cpp  test2.h
past_interviews/Interview_Questions/: Apple.cpp  BFS.cpp  Bit_Manipulation.cpp  CMakeLists.txt  Constructors.cpp  DFS.cpp  IKM.cpp  IKM_2.cpp  IKM_3.cpp  IKM_Notes.txt  Jason.cpp  Learn.cpp  Leetcode.cpp  Map.cpp  Multi-processing_threading.txt  Notes.txt  Priority_Queue.cpp  SOLID.txt  STL.cpp  Set.cpp  Templates.cpp  Tesla.cpp  ThreadSafeQueue.cpp  Unordered_Map.cpp  Unordered_Set.cpp  shared_ptr.cpp
past_interviews/Kumar_Tesla_Autopilot_Challenge/: README.txt
past_interviews/Kumar_Tesla_Autopilot_Challenge/src/: main.cpp  network.cpp
past_interviews/Live_Coding/: CMakeLists.txt  Live_Coding.cpp
past_interviews/MathWorks/: CMakeLists.txt  Modified.cpp  Modified2.cpp  main.cpp
past_interviews/Tesla/: CMakeLists.txt  Tesla.cpp
past_interviews/Zoox/: CMakeLists.txt  a_star.cpp  dijstra.cpp  main.cpp
