cmake_minimum_required(VERSION 3.21)
project(Interview_Questions)

set(CMAKE_CXX_STANDARD 11)

add_executable(Apple Apple.cpp)
add_executable(BFS BFS.cpp)
add_executable(Bit_Manipulation Bit_Manipulation.cpp)
add_executable(Constructors Constructors.cpp)
add_executable(DFS DFS.cpp)
add_executable(IKM IKM.cpp)
add_executable(IKM_2 IKM_2.cpp)
add_executable(IKM_3 IKM_3.cpp)
add_executable(Interview_Questions main.cpp)
add_executable(Jason Jason.cpp)
add_executable(Leetcode Leetcode.cpp)
add_executable(Map Map.cpp)
add_executable(Priority_Queue Priority_Queue.cpp)
add_executable(Set Set.cpp)
add_executable(STL STL.cpp)
add_executable(Templates Templates.cpp)
add_executable(Tesla Tesla.cpp)
add_executable(ThreadSafeQueue ThreadSafeQueue.cpp)
add_executable(SharedPtr shared_ptr.cpp)
add_executable(Unordered_Set Unordered_Set.cpp)
add_executable(Unordered_Map Unordered_Map.cpp)
